src/test/ui/parser/keyword-match-as-identifier.stderr
error: expected pattern, found keyword `match`
  --> $DIR/keyword-match-as-identifier.rs:6:9
   |
LL |     let match = "foo"; //~ error: expected pattern, found keyword `match`
   |         ^^^^^ expected pattern

error: aborting due to previous error

